base/solution0003/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: solution0003-service
  namespace: tenant-example
  labels:
    app: solution0003
spec:
 selector:
   app: solution0003
 type: ClusterIP  
 ports:
  - protocol: TCP
    port: 9091
    targetPort: 9091
