base/solution0003/virtual-service.yaml
---
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: solution0003-https
  namespace: tenant-example
  labels:
    app: solution0003
    gateway: https
spec:
  virtualHost:
    domains:
    - 'solution0003.ea.sdlc.k8s.cbrands.com'
    routes:
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: tenant-example-solution0003-service-9091
            namespace: gloo-system
